<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.starfishst.guido</groupId>
    <artifactId>guido</artifactId>
    <version>1.2.1</version>
    <description>A bot for elo and abstractMatch making</description>
    <packaging>pom</packaging>

    <modules>
        <module>bukkit</module>
        <module>bukkit_commons</module>
        <module>bukkit_pgm</module>
        <module>core</module>
        <module>server</module>
        <module>server_commons</module>
        <module>server_bot</module>
        <module>server_mongo</module>
    </modules>

    <build>
        <plugins>
            <!-- Java version -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <!-- Maven java formatter plugin (Google format) -->
            <plugin>
                <artifactId>fmt-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
                <groupId>com.coveo</groupId>
                <version>2.9</version>
            </plugin>
        </plugins>
    </build>

    <properties>
        <!-- Character encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <guido.version>1.2.1</guido.version>
        <lombok.version>1.18.30</lombok.version>
        <starbox-commands.version>1b75b68e7c</starbox-commands.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Dependency to the Lombok annotations -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>mongodb-driver-bom</artifactId>
                <version>5.8.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Dependency to the Lombok annotations -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>compile</scope>
        </dependency>
        <!-- Dependency to junit for testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>